--- a/vue2x/dgwifi/package.json
+++ b/vue2x/dgwifi/package.json
@@ -6,13 +6,10 @@
   "private": true,
   "scripts": {
     "dev": "node build/dev-server.js",
-    "build": "node build/build.js",
-    "unit": "karma start test/unit/karma.conf.js --single-run",
-    "e2e": "node test/e2e/runner.js",
-    "test": "npm run unit && npm run e2e"
+    "build": "node build/build.js"
   },
   "dependencies": {
-    "vue": "^2.0.1"
+    "vue": "^2.0.5"
   },
   "devDependencies": {
     "autoprefixer": "^6.4.0",
@@ -22,9 +19,6 @@
     "babel-preset-es2015": "^6.0.0",
     "babel-preset-stage-2": "^6.0.0",
     "babel-register": "^6.0.0",
-    "chai": "^3.5.0",
-    "chalk": "^1.1.3",
-    "chromedriver": "^2.21.2",
     "connect-history-api-fallback": "^1.1.0",
     "cross-spawn": "^4.0.2",
     "css-loader": "^0.25.0",
@@ -38,29 +32,13 @@
     "inject-loader": "^2.0.1",
     "isparta-loader": "^2.0.0",
     "json-loader": "^0.5.4",
-    "karma": "^1.3.0",
-    "karma-coverage": "^1.1.1",
-    "karma-mocha": "^1.2.0",
-    "karma-phantomjs-launcher": "^1.0.0",
-    "karma-sinon-chai": "^1.2.0",
-    "karma-sourcemap-loader": "^0.3.7",
-    "karma-spec-reporter": "0.0.26",
-    "karma-webpack": "^1.7.0",
-    "lolex": "^1.4.0",
-    "mocha": "^3.1.0",
-    "nightwatch": "^0.9.8",
     "node-sass": "^3.11.2",
     "opn": "^4.0.2",
     "ora": "^0.3.0",
-    "phantomjs-prebuilt": "^2.1.3",
     "postcss": "^5.2.5",
     "postcss-loader": "^1.1.0",
     "sass-loader": "^4.0.2",
-    "selenium-server": "2.53.1",
-    "semver": "^5.3.0",
     "shelljs": "^0.7.4",
-    "sinon": "^1.17.3",
-    "sinon-chai": "^2.8.0",
     "url-loader": "^0.5.7",
     "vue-loader": "^9.4.0",
     "vue-style-loader": "^1.0.0",
