--- a/vue2x/dgwifi/package.json
+++ b/vue2x/dgwifi/package.json
@@ -38,6 +38,7 @@
     "postcss": "^5.2.5",
     "postcss-loader": "^1.1.0",
     "sass-loader": "^4.0.2",
+    "semver": "^5.3.0",
     "shelljs": "^0.7.4",
     "url-loader": "^0.5.7",
     "vue-loader": "^9.4.0",
