--- a/vue2x/package.json
+++ b/vue2x/package.json
@@ -19,6 +19,7 @@
     "babel-preset-es2015": "^6.0.0",
     "babel-preset-stage-2": "^6.0.0",
     "babel-register": "^6.0.0",
+    "chalk": "^1.1.3",
     "connect-history-api-fallback": "^1.1.0",
     "cross-spawn": "^4.0.2",
     "css-loader": "^0.25.0",
@@ -38,6 +39,7 @@
     "postcss": "^5.2.5",
     "postcss-loader": "^1.1.0",
     "sass-loader": "^4.0.2",
+    "semver": "^5.3.0",
     "shelljs": "^0.7.4",
     "url-loader": "^0.5.7",
     "vue-loader": "^9.4.0",
