--- a/vue2x/dgwifi/package.json
+++ b/vue2x/dgwifi/package.json
@@ -6,7 +6,8 @@
   "private": true,
   "scripts": {
     "dev": "node build/dev-server.js",
-    "build": "node build/build.js"
+    "build": "node build/build.js",
+    "deploy": "BUILD_ENV=deploy node build/build.js"
   },
   "dependencies": {
     "vue": "^2.0.5"
