--- a/vue2x/package.json
+++ b/vue2x/package.json
@@ -23,6 +23,7 @@
     "connect-history-api-fallback": "^1.1.0",
     "cross-spawn": "^4.0.2",
     "css-loader": "^0.25.0",
+    "element-ui": "^1.0.1",
     "env": "^0.0.2",
     "eventsource-polyfill": "^0.9.6",
     "express": "^4.13.3",
@@ -46,6 +47,8 @@
     "vue-infinite-scroll": "^2.0.0",
     "vue-loader": "^9.4.0",
     "vue-style-loader": "^1.0.0",
+    "vue-validator": "^3.0.0-alpha.1",
+    "vuex": "^2.0.0",
     "webpack": "^1.13.2",
     "webpack-dev-middleware": "^1.8.3",
     "webpack-hot-middleware": "^2.12.2",
