--- a/vue2x/webpage/package.json
+++ b/vue2x/webpage/package.json
@@ -6,7 +6,8 @@
   "private": true,
   "scripts": {
     "dev": "node build/dev-server.js",
-    "build": "node build/build.js"
+    "build": "node build/build.js",
+    "deploy": "BUILD_ENV=deploy node build/build.js"
   },
   "dependencies": {
     "vue": "^2.0.5"
@@ -19,12 +20,9 @@
     "babel-preset-es2015": "^6.0.0",
     "babel-preset-stage-2": "^6.0.0",
     "babel-register": "^6.0.0",
-    "chalk": "^1.1.3",
     "connect-history-api-fallback": "^1.1.0",
     "cross-spawn": "^4.0.2",
     "css-loader": "^0.25.0",
-    "element-ui": "^1.0.1",
-    "env": "^0.0.2",
     "eventsource-polyfill": "^0.9.6",
     "express": "^4.13.3",
     "extract-text-webpack-plugin": "^1.0.1",
@@ -44,12 +42,8 @@
     "semver": "^5.3.0",
     "shelljs": "^0.7.4",
     "url-loader": "^0.5.7",
-    "vue-infinite-scroll": "^2.0.0",
     "vue-loader": "^9.4.0",
     "vue-style-loader": "^1.0.0",
-    "vue-swipe": "^2.0.0",
-    "vue-validator": "^3.0.0-alpha.1",
-    "vuex": "^2.0.0",
     "webpack": "^1.13.2",
     "webpack-dev-middleware": "^1.8.3",
     "webpack-hot-middleware": "^2.12.2",
