--- a/vue2x/package.json
+++ b/vue2x/package.json
@@ -47,6 +47,7 @@
     "vue-infinite-scroll": "^2.0.0",
     "vue-lazyload": "^0.9.5",
     "vue-loader": "^9.4.0",
+    "vue-router": "^2.1.1",
     "vue-style-loader": "^1.0.0",
     "vue-swipe": "^2.0.0",
     "vue-validator": "^3.0.0-alpha.1",
