--- a/vue2x/package.json
+++ b/vue2x/package.json
@@ -9,7 +9,8 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "vue": "^2.0.5"
+    "vue": "^2.0.5",
+    "vue-infinite-loading": "^2.0.0-rc.5"
   },
   "devDependencies": {
     "autoprefixer": "^6.4.0",
