--- a/vue2x/package.json
+++ b/vue2x/package.json
@@ -9,7 +9,8 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "vue": "^2.0.5",
+    "element-ui": "^1.2.1",
+    "vue": "^2.1.6",
     "vue-infinite-loading": "^2.0.0-rc.5"
   },
   "devDependencies": {
@@ -48,6 +49,7 @@
     "semver": "^5.3.0",
     "shelljs": "^0.7.4",
     "url-loader": "^0.5.7",
+    "vue": "^2.2.1",
     "vue-infinite-scroll": "^2.0.0",
     "vue-lazyload": "^0.9.5",
     "vue-loader": "^9.4.0",
