--- a/wxDoctor/app.json
+++ b/wxDoctor/app.json
@@ -1,13 +1,14 @@
 {
   "pages":[
+    "pages/screen/screen",
     "pages/index/index",
-    "pages/forgetcode/forgetcode",
+    "pages/wallet/wallet",
     "pages/setcode/setcode",
+    "pages/forgetcode/forgetcode",
     "pages/scancode/scancode",
     "pages/binddrlist/list",
     "pages/drpatient/drpatient",
     "pages/patientinfo/patientinfo",
-    "pages/wallet/wallet",
     "pages/rules/rules",
     "pages/drconfirm/drconfirm",
     "pages/writepatient/writepatient",
