--- a/vue2x/wxlogin/package.json
+++ b/vue2x/wxlogin/package.json
@@ -1,5 +1,17 @@
 {
+  "name": "adlogin",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack --config webpack.dev.config.js --progress --display-modules",
+    "deploy": "webpack --config webpack.prod.config.js --progress --display-modules"
+  },
+  "author": "",
+  "license": "ISC",
   "devDependencies": {
+    "html-webpack-plugin": "^2.30.1",
     "webpack": "^3.4.1"
   }
 }
