--- a/oss/package.json
+++ b/oss/package.json
@@ -12,8 +12,10 @@
     "test": "npm run unit && npm run e2e"
   },
   "dependencies": {
-    "vue": "^2.0.5",
-    "element-ui": "^1.0.0"
+    "element-react": "^1.3.1",
+    "element-theme-default": "^1.4.8",
+    "element-ui": "^1.0.0",
+    "vue": "^2.0.5"
   },
   "devDependencies": {
     "autoprefixer": "^6.4.0",
