--- a/liveoss/package.json
+++ b/liveoss/package.json
@@ -52,6 +52,7 @@
     "happypack": "^4.0.0",
     "html-loader": "^0.3.0",
     "html-webpack-plugin": "^2.28.0",
+    "iview-area": "^1.5.12",
     "less": "^2.7.1",
     "less-loader": "^2.2.3",
     "semver": "^5.4.1",
