--- a/liveoss/package.json
+++ b/liveoss/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "init": "webpack --progress --config build/webpack.dev.config.js",
-    "dev": "webpack-dev-server --content-base ./ --open --inline --hot --compress --config build/webpack.dev.config.js",
+    "dev":"node build/dev-server.js",
+    //"dev": "webpack-dev-server --content-base ./ --open --inline --hot --compress --config build/webpack.dev.config.js",
     "build": "webpack --progress --hide-modules --config build/webpack.prod.config.js",
     "lint": "eslint --fix --ext .js,.vue src",
     "test": "npm run lint"
@@ -57,11 +58,13 @@
     "less-loader": "^2.2.3",
     "semver": "^5.4.1",
     "style-loader": "^0.13.1",
+    "superagent": "^3.8.2",
     "unsupported": "^1.1.0",
     "url-loader": "^0.5.7",
     "vue-hot-reload-api": "^1.3.3",
     "vue-html-loader": "^1.2.3",
     "vue-loader": "^11.0.0",
+    "vue-resource": "^1.3.5",
     "vue-style-loader": "^1.0.0",
     "vue-template-compiler": "^2.5.2",
     "webpack": "^2.2.1",
