--- a/liveoss/package.json
+++ b/liveoss/package.json
@@ -1,74 +1,69 @@
 {
-  "name": "iview-admin-template",
+  "name": "my-project",
   "version": "1.0.0",
-  "description": "a management template bases on iview",
-  "main": "index.js",
+  "description": "A Vue.js project",
+  "author": "chunyanzeng <2218583181@qq.com>",
+  "private": true,
   "scripts": {
-    "init": "webpack --progress --config build/webpack.dev.config.js",
-    "dev":"node build/dev-server.js",
-    //"dev": "webpack-dev-server --content-base ./ --open --inline --hot --compress --config build/webpack.dev.config.js",
-    "build": "webpack --progress --hide-modules --config build/webpack.prod.config.js",
-    "lint": "eslint --fix --ext .js,.vue src",
-    "test": "npm run lint"
+    "dev": "node build/dev-server.js",
+    "build": "node build/build.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/iview/iview-admin.git"
-  },
-  "author": "",
-  "license": "MIT",
   "dependencies": {
     "axios": "^0.15.3",
     "iview": "^2.7.2",
+    "iview-area": "^1.5.12",
     "js-cookie": "^2.1.3",
     "vue": "^2.5.2",
     "vue-router": "^2.8.1",
     "vuex": "^2.5.0"
   },
   "devDependencies": {
-    "autoprefixer-loader": "^2.0.0",
-    "babel": "^6.23.0",
-    "babel-core": "^6.23.1",
-    "babel-eslint": "^8.0.1",
-    "babel-loader": "^6.4.1",
-    "babel-plugin-transform-runtime": "^6.12.0",
-    "babel-preset-env": "^1.6.0",
-    "babel-preset-es2015": "^6.9.0",
+    "autoprefixer": "^6.4.0",
+    "babel-core": "^6.0.0",
+    "babel-loader": "^6.0.0",
+    "babel-plugin-transform-runtime": "^6.0.0",
+    "babel-preset-es2015": "^6.0.0",
+    "babel-preset-stage-2": "^6.0.0",
     "babel-preset-stage-3": "^6.24.1",
-    "babel-runtime": "^6.11.6",
-    "clean-webpack-plugin": "^0.1.17",
-    "copy-webpack-plugin": "^4.2.0",
-    "css-hot-loader": "^1.3.3",
-    "css-loader": "^0.23.1",
-    "eslint": "^3.19.0",
-    "eslint-config-google": "^0.9.1",
-    "eslint-config-standard": "^10.2.1",
-    "eslint-plugin-html": "^1.7.0",
-    "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-node": "^5.2.0",
-    "eslint-plugin-promise": "^3.6.0",
-    "eslint-plugin-standard": "^3.0.1",
-    "extract-text-webpack-plugin": "^2.0.0",
-    "file-loader": "^0.8.5",
-    "happypack": "^4.0.0",
+    "babel-register": "^6.0.0",
+    "chai": "^3.5.0",
+    "chalk": "^1.1.3",
+    "chromedriver": "^2.21.2",
+    "connect-history-api-fallback": "^1.1.0",
+    "cross-spawn": "^4.0.2",
+    "css-loader": "^0.25.0",
+    "eventsource-polyfill": "^0.9.6",
+    "express": "^4.13.3",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.9.0",
+    "function-bind": "^1.0.2",
     "html-loader": "^0.3.0",
-    "html-webpack-plugin": "^2.28.0",
-    "iview-area": "^1.5.12",
+    "html-webpack-plugin": "^2.8.1",
+    "http-proxy-middleware": "^0.17.2",
+    "inject-loader": "^2.0.1",
+    "json-loader": "^0.5.4",
+    "lolex": "^1.4.0",
+    "nightwatch": "^0.9.8",
+    "opn": "^4.0.2",
+    "ora": "^0.3.0",
+    "selenium-server": "2.53.1",
+    "semver": "^5.3.0",
+    "shelljs": "^0.7.4",
+    "sinon": "^1.17.3",
+    "sinon-chai": "^2.8.0",
     "less": "^2.7.1",
     "less-loader": "^2.2.3",
-    "semver": "^5.4.1",
-    "style-loader": "^0.13.1",
-    "superagent": "^3.8.2",
-    "unsupported": "^1.1.0",
     "url-loader": "^0.5.7",
-    "vue-hot-reload-api": "^1.3.3",
-    "vue-html-loader": "^1.2.3",
-    "vue-loader": "^11.0.0",
-    "vue-resource": "^1.3.5",
+    "vue-loader": "^9.4.0",
     "vue-style-loader": "^1.0.0",
     "vue-template-compiler": "^2.5.2",
-    "webpack": "^2.2.1",
-    "webpack-dev-server": "^2.9.2",
-    "webpack-merge": "^3.0.0"
+    "webpack": "^1.13.2",
+    "webpack-dev-middleware": "^1.8.3",
+    "webpack-hot-middleware": "^2.12.2",
+    "webpack-merge": "^0.14.1"
+  },
+  "engines": {
+    "node": ">= 4.0.0",
+    "npm": ">= 3.0.0"
   }
 }
