--- a/liveoss/package.json
+++ b/liveoss/package.json
@@ -18,6 +18,7 @@
     "vuex": "^2.5.0"
   },
   "devDependencies": {
+    "@xkeshi/vue-qrcode": "^0.3.0",
     "autoprefixer": "^6.4.0",
     "babel-core": "^6.0.0",
     "babel-loader": "^6.0.0",
@@ -48,6 +49,7 @@
     "nightwatch": "^0.9.8",
     "opn": "^4.0.2",
     "ora": "^0.3.0",
+    "qrcode.js": "^0.0.1",
     "selenium-server": "2.53.1",
     "semver": "^5.3.0",
     "shelljs": "^0.7.4",
