--- a/liveoss/package.json
+++ b/liveoss/package.json
@@ -29,7 +29,6 @@
     "babel-register": "^6.0.0",
     "chai": "^3.5.0",
     "chalk": "^1.1.3",
-    "chromedriver": "^2.21.2",
     "connect-history-api-fallback": "^1.1.0",
     "cross-spawn": "^4.0.2",
     "css-loader": "^0.25.0",
@@ -62,7 +61,9 @@
     "webpack": "^1.13.2",
     "webpack-dev-middleware": "^1.8.3",
     "webpack-hot-middleware": "^2.12.2",
-    "webpack-merge": "^0.14.1"
+    "webpack-merge": "^0.14.1",
+    "vue-resource": "^1.3.5",
+    "vue-qrcode": "^0.0.2"
   },
   "engines": {
     "node": ">= 4.0.0",
